--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -24,6 +24,8 @@
 <button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
 <button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
 <button type="button" onclick="location.href='/board/list'">전체임시</button>
+<button type="button" onclick="location.href='/board/page'">페이지임시</button>
+
 </div>
         <header>
             <nav>
