--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -99,7 +99,7 @@ value="apply"일 경우 > 가능스택
 				</div>
 				<div class="buttons">
 					<button type="submit">저장</button>
-					<button type="button" onclick="location.href='/board/list'">목록</button>
+					<button type="button" onclick="location.href='/board/page'">목록</button>
 
 					<input type="file" id="chooseFile" name="uploadFile" accept="image/*">
 
