--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -76,7 +76,7 @@
 
 
 		<tr th:each="comment: ${comment}">
-			<form method="get" onsubmit="return confirm('정말 삭제하시겠습니까?')">
+			<form method="get" onsubmit="return commentDeleteCheck()">
 				<td th:text="${comment.memberNum}"></td> <br>
 				<td name="commentContent" th:text="${comment.commentContent}"></td>
 
@@ -117,7 +117,7 @@
 
 
 
-		<button type="button" onclick="location.href='/board/list'">목록</button>
+		<button type="button" onclick="location.href='/board/page'">목록</button>
 
 
 	</div>
@@ -143,6 +143,13 @@
 	 });	
 	 */
 
+	 function commentDeleteCheck(){
+		 if(!confirm('정말로 삭제하시겠습니까?')){
+			 return false;
+		 }
+		
+	 }
+	 
 	function detailUpdateAction(prop) {
 		//작성자명 class와 로그인유저 class 를 선택해서 일치여부 확인
 		//일치하면 update 프로세스로 이동
