--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -96,7 +96,7 @@ space_dashboard게시판
 
                         <button id="edit">정보 수정</button>
 
-						 <div class="myLog" >
+					<div class="myLog">
 						<h4>log</h4>
 						<div id="myPageList">
 							<div>
@@ -110,56 +110,13 @@ space_dashboard게시판
 							</div>
 						</div>
 						<div id="showList">
-							<h4>아녕</h4>
-	<!-- 						<table border="1">
-								<tr>
-									<th>카테고리</th>
-									<th>제목</th>
-									<th>작성자</th>
-									<th>작성일자</th>
-									<th>시작일자</th>
-								</tr>
+							<h4></h4>
 
-								<form name="searchList" action="/board/list" method="post">
-<input type='search' name='searchKeyword' /><button type="submit">검색</button>
-</form>
-								<tr th:each="list : ${list}">
-									<td th:text="${list.category}"></td>
-									<td th:text="${list.title}"></td>
-									<td th:text="${list.loginId}"></td>
-									<td th:text="${list.date}"></td>
-									<td th:text="${list.startDate}"></td>
-								</tr>
-							</table> -->
 						</div>
 
 
-						<!-- <ul>
-                                <li>UI / UX</li>
-                                <li>HTML1</li>
-                                <li>CSS2</li>
-                                <li>JavaScript1</li>
-                                <li>jQuery</li>
-                                <li>React</li>
-                                <li>Node JS</li>
-                            </ul> -->
-                        </div>
 
-                        <!-- <div class="skills">
-                            <h4>Skills</h4>
-                            <ul>
-                                <li>UI / UX</li>
-                                <li>HTML</li>
-                                <li>CSS</li>
-                                <li>JavaScript</li>
-                                <li>jQuery</li>
-                                <li>React</li>
-                                <li>Node JS</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div> -->
-            </section>
+					</div></section>
         </div>
         <!-- SECTION1 LOGIN,JOIN END -->
 
