마이페이지 닉네임나오게

--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -90,7 +90,7 @@ space_dashboard게시판
                     <div class="card">
                         <span class="level">junior</span>
                         <img src="/images/PP.png" alt="my card" class='picture'>
-                        <h2>[[${nickname}]]</h2>
+                        <h2>[[${nickname}]]님</h2>
                         <p>웹디자이너<br> Front End</p>
 
 
