--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -22,6 +22,12 @@
       	list-style :none;
      	 padding-left :0px;
       }
+      
+      .board__image{
+      width:120px;
+      height:80px;
+      object-fit:scale-down;
+      }
       </style>
   </head>
   <body>
@@ -32,6 +38,7 @@
         <th>글번호</th>
         <th>카테고리</th>
         <th>스택</th>
+        <th>썸네일</th>
         <th>제목</th>
         <th>작성자</th>
         <th>작성일자</th>
@@ -60,10 +67,12 @@
         </td>
         <td th:text="${board.category}"></td>
         <td>
-          <ul th:each="aa : ${board.stack}" >
-            <li>[[${aa}]]</li>
+          <ul th:each="stacks : ${board.stack}" >
+            <li>[[${stacks}]]</li>
           </ul>
         </td>
+        <td><img class="board__image"
+					th:src="@{/img/}+${board.boardNum}+.png" onerror="this.src='/images/alt.jpg'"></td>
              <td><a  th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="${board.title}"></a><a th:href="@{/board/detail(boardNum=${board.boardNum})}" th:text="|[${board.commentCount}]|"></a></td>
 
         <td th:text="${board.memberNum}"></td>
