--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -30,7 +30,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <img src="/images/llogo.gif" alt="" id="logo" onclick="goToScroll('a')">
+                    <img src="/images/llogo.jpg" alt="" id="logo" onclick="goToScroll('a')">
                 </div>
                 <div class="menu">
 
