--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -45,7 +45,6 @@ input:focus {outline:none;}
 html *,
 html *::before,
 html *::after {
-
     box-sizing: inherit;
 
 }
@@ -54,8 +53,9 @@ header{
     width: 100%;
     position: fixed;
     justify-content: center;
-    margin:3%  auto;
+    margin:3.6%  auto;
     z-index: 999;
+    height: 150px;
 
 }
 header .menu{
@@ -86,7 +86,7 @@ body{
 }
 section{
 
-height: 100vh;
+    height: 100vh;
 }
 
 
@@ -105,7 +105,7 @@ height: 100vh;
     justify-content: center;
     padding: 0.55em 0 0.85em;
     transition: transform var( var(--duration));
-
+    transition-timing-function: linear;
 }
 
 .menu__item::before{
@@ -116,7 +116,7 @@ height: 100vh;
     height: 4.2em;
     border-radius: 50%;
     position: absolute;
-    transform: scale(0);
+    transform: scale(1);
     transition: background-color var(--duration), transform var(--duration);
 
 }
@@ -130,7 +130,7 @@ height: 100vh;
 
 .menu__item.active::before{
 
-    transform: scale(1);
+    transform: scale(0);
     background-color: var(--bgColorItem);
 
 }
@@ -383,4 +383,33 @@ height: 100vh;
 }
 .container .table-striped thead th:nth-child(7){
     width: 60px;
+}
+
+
+
+.modalWrap {
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.4);
+    display: none;
+    justify-content: center;
+    position: absolute;
+}
+
+.modalContent {
+    background: white;
+    width: 350px;
+    height: 200px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 0 15px black;
+
+
+}
+
+.active {
+
+    width: 30px;
+    height: 140px;
+    background: black;
 }
