--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,8 +15,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
 	<script src="/https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-	<link th:href="@{new/css/style.css}" rel="stylesheet">
-	<link href="new/css/style.css" rel="stylesheet">
+	<link th:href="@{/css/style.css}" rel="stylesheet">
+	<link href="/css/style.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/Boardcss.css}" />
 <!--new-->
 
