--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,6 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 <!--new-->
@@ -75,7 +74,8 @@
 
 
 
-// <!-- SECTION 1 LOGIN,JOIN START --><div class="b">
+// <!-- SECTION 1 LOGIN,JOIN START -->
+	<div class="b">
 		<section class="sec1">
 			<div class="b-l">
 				<form method="post" action="/members/new" id="login-form">
@@ -142,16 +142,17 @@
 			</div>
 		</section>
 	</div>
-			<!--   //중복체크를 진행할 모달창-->
+		 //중복체크를 진행할 모달창-->
 			<div id="modal" class="modalWrap">
 				<div class="modalContent">
 					<form id="idCheck" method="post" onsubmit="return false">
-						<input type="text" name="loginIdCheck"/>
-						<input type="submit"/>
+						<input type="text" name="loginIdCheck">
+						<input type="submit">
 						<button type="button" onclick="closeModal()">X</button>
 					</form>
 				</div>
 			</div>
+
 		</div>
 	</section>
 </div>
@@ -219,7 +220,13 @@
 					</tbody>
 
 				</table>
+				<div class="board-button">
+					<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
+					<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
+					<button type="button" onclick="location.href='/board/list'">전체임시</button>
+					<button type="button" onclick="location.href='/board/page'">페이지임시</button>
 
+				</div>
 				<div class="text-center">
 					<ul class="pagination">
 						<li><a href="#">1</a></li>
@@ -303,7 +310,7 @@
 		const menuBorder = menu.querySelector(".menu__border");
 		let activeItem = menu.querySelector(".active");
 
-		function clickItem(item, index) {
+		function clickItem(item, home) {
 
 			menu.style.removeProperty("--timeOut");
 
@@ -332,7 +339,7 @@
 
 		offsetMenuBorder(activeItem, menuBorder);
 
-		menuItems.forEach((item, index) => {
+		menuItems.forEach((item, home) => {
 
 			item.addEventListener("click", () => clickItem(item, home));
 
