--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -58,7 +58,7 @@
 		</svg>
 	</div>
 </header>
-// <!-- SECTION 0 PRODUCTS SLIDE START-->
+ <!-- SECTION 0 PRODUCTS SLIDE START-->
 	<div class="a">
 		<section class="sec0">
 			<div class="a-top">
@@ -70,11 +70,11 @@
 		</section>
 	</div>
 
-// <!-- SECTION 0 PRODUCTS SLIDE END-->
+ <!-- SECTION 0 PRODUCTS SLIDE END-->
 
 
 
-// <!-- SECTION 1 LOGIN,JOIN START -->
+ <!-- SECTION 1 LOGIN,JOIN START -->
 	<div class="b">
 		<section class="sec1">
 			<div class="b-l">
@@ -142,7 +142,7 @@
 			</div>
 		</section>
 	</div>
-		 //중복체크를 진행할 모달창-->
+
 			<div id="modal" class="modalWrap">
 				<div class="modalContent">
 					<form id="idCheck" method="post" onsubmit="return false">
