--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -95,7 +95,7 @@ space_dashboard게시판
 
 
                         <button id="edit">정보 수정</button>
-                        <button><a href="logOut" >로그아웃</a></button>
+                        <button><a href="member/logOut" >로그아웃</a></button>
 
 					<div class="myLog">
 						<h4>log</h4>
