--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -113,8 +113,9 @@
 
 
 
- <!-- SECTION 1 LOGIN,JOIN START --><div class="b">
+ <!-- SECTION 1 LOGIN,JOIN START -->
 
+ <div class="b">
 <!-----------로그인---------->
 		<section class="sec1">
 			<div class="b-l">
@@ -156,8 +157,8 @@
 					<table>
 						<tr>
 							<td>
-								<label for=name>
-									<input id="name" name="name" type="text" placeholder="회원가입 아이디">
+								<label for=useId>
+									<input id="useId" name="loginId" type="text" placeholder="회원가입 아이디">
 								</label>
 							</td>
 						</tr>
@@ -165,48 +166,42 @@
 						<tr>
 							<td>
 								<label for=pw>
-									<input id="pw" name="pw" type="password" placeholder="비밀번호">
+									<input id="pw" name="password" type="password" placeholder="비밀번호">
 								</label>
 							</td>
 						</tr>
 						<tr>
 							<td>
 								<label for=name>
-									<input id="nick" name="name" type="text" placeholder="닉네임">
+									<input id="nick" name="nickname" type="text" placeholder="닉네임">
 								</label>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<button id="val" type="submit" value="join">중복체크</button>
+								<button type="button" onclick="openModal()">중복체크</button>
 							</td>
 
 							<td>
 								<button id="join" type="submit" value="join">join</button>
 							</td>
 						</tr>
-
-
-
 					</table>
 				</form>
 			</div>
-		</section>
-	</div>
-
 			<div id="modal" class="modalWrap">
 				<div class="modalContent">
 					<form id="idCheck" method="post" onsubmit="return false">
-						<input type="text" name="loginIdCheck">
+						<input type="text" name="loginIdCheck" placeholder="사용하실 아이디를 입력해주세요.">
 						<input type="submit">
 						<button type="button" onclick="closeModal()">X</button>
 					</form>
 				</div>
 			</div>
+		</section>
+	</div>
 
-		</div>
-	</section>
-</div>
+
 <!-- SECTION1 LOGIN,JOIN END -->
 
 
@@ -379,7 +374,6 @@
 
 
 		"use strict";
-
 		const body = document.body;
 		const bgColorsBody = ["#ffb457", "#ff96bd", "#9999fb", "#ffe797", "#cffff1"];
 		const menu = body.querySelector(".menu");
@@ -435,17 +429,6 @@
 			var location = document.querySelector("." + name).offsetTop;
 			window.scrollTo({top: location, behavior: 'smooth'});
 		}
-		var mydiv = document.getElementById("mydiv");
-		if (mydiv.addEventListener) {
-			// IE9, Chrome, Safari, Opera
-			mydiv.addEventListener("mousewheel", MouseWheelHandler, false);
-			// Firefox
-			mydiv.addEventListener("DOMMouseScroll", MouseWheelHandler, false);
-		}
-// IE 6/7/8
-		else
-			mydiv.attachEvent("onmousewheel", MouseWheelHandler);
-
 	</script>
 </body>
 </html>
