--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -72,34 +72,29 @@
         </div>
         <!-- SECTION 0 PRODUCTS SLIDE END-->
         <!-- SECTION 1 LOGIN,JOIN START -->
-        <div class="b-a">
-            <section class="sec1-a">
-                <div class="mem-a">
-                    <div class="card-a">
-                        <h2>[[${nickname}]]님</h2>
-                        <button id="edit-a">정보 수정</button>
-                        <button><a href="logOut-a" >로그아웃</a></button>
-                    </div>
-                    <div class="myLog-a">
-                        <div id="myPageList-a">
-                            <div>
-                                <button id="exePost-a">작성 한 글</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <button id="exeLike-a">좋아요 한 글</button>
-                    </div>
-                    <div>
-                        <button id="exeComment-a">댓글 단 글</button>
-                    </div>
-                </div>
-                <div id="showList-a">
-                </div>
+<div class="b-a">
+<section class="sec1-a">
+<div class="mem-a">
 
-        </div>
-        </section>
-        </div>
+<div class="card-a">
+<h2>[[${nickname}]]님</h2>
+<button id="edit-a">정보 수정</button>
+<button><a href="logOut-a">로그아웃</a></button>
+</div>
+
+<div class="myLog-a">
+<div class="text-button-a">
+<button id="exePost-a">작성 한 글</button>
+<button id="exeLike-a">좋아요 한 글</button>
+<button id="exeComment-a">댓글 단 글</button>
+</div>
+</div>
+<div id="showList-a">
+</div>
+</div>
+</section>
+</div>
+
         <!-- SECTION1 LOGIN,JOIN END -->
         <!-- SECTION 2 CARDS STARTS -->
         <div class="c">
