--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -78,7 +78,7 @@
 
 <div class="card-a">
 <h2>[[${nickname}]]님</h2>
-<button id="edit-a">정보 수정</button>
+<button id="edit-a">정보 수d정</button>
 <button><a href="logOut-a">로그아웃</a></button>
 </div>
 
