--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -86,7 +86,7 @@
 			<div class="login">
 				<div class="login-wrapper">
 
-					<form method="post" action="/member/login" id="login-form">
+					<form method="post" action="/login" id="login-form">
 						<input type="text" name="loginId" placeholder="Email" id="loginId">
 						<input type="password" name="password" placeholder="Password">
 						<label for="remember-check">
@@ -105,7 +105,9 @@
 				<div class="a-bottom">
 					<h1>역대 프로젝트</h1>
 
+				</div>
 			</div>
+		</div>
 		</section>
 	</div>
 
