--- a/src/main/resources/templates/member/login-after.html
+++ b/src/main/resources/templates/member/login-after.html
@@ -84,7 +84,7 @@
 
 <div class="myLog-a">
 <div class="text-button-a">
-<button id="exePost-a">작성 한d 글</button>
+<button id="exePost-a">작성 한 글</button>
 <button id="exeLike-a">좋아요 한 글</button>
 <button id="exeComment-a">댓글 단 글</button>
 </div>
