--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
-	<script src="/https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!--font,icon,js-->
 
 <!--css-->
@@ -86,7 +86,7 @@
 			<div class="login">
 				<div class="login-wrapper">
 
-					<form method="post" action="/member/login" id="login-form">
+					<form method="post" action="/login" id="login-form">
 						<input type="text" name="loginId" placeholder="Email" id="loginId">
 						<input type="password" name="password" placeholder="Password">
 						<label for="remember-check">
