--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="/https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <!--font,icon,js-->
 
 <!--css-->
@@ -67,6 +67,10 @@
 				<h1>모집중인 프로젝트</h1>
 			</div>
 			<ul class="pages"></ul>
+			<div class="a-bottom">
+				<h1>역대 프로젝트</h1>
+
+			</div>
 		</div>
 
 		<script>
@@ -79,35 +83,32 @@
 
 
 <!-- SECTION 1 LOGIN,JOIN START -->
-<div class="b">
-	<section class="sec1">
-		<div class="mem">
+<!--<div class="b">-->
+<!--	<section class="sec1">-->
+<!--		<div class="mem">-->
 
-			<div class="login">
-				<div class="login-wrapper">
+<!--			<div class="login">-->
+<!--				<div class="login-wrapper">-->
 
-					<form method="post" action="/login" id="login-form">
-						<input type="text" name="loginId" placeholder="Email" id="loginId">
-						<input type="password" name="password" placeholder="Password">
-						<label for="remember-check">
-							<input type="checkbox" id="remember-check">아이디 저장하기
-						</label>
-						<input id="submitId" type="submit" value="Login">
-					</form>
-					<ul>
-						<li> 이메일 찾기</li>
-						<li><span>|</span>비밀번호 찾기</li>
+<!--					<form method="post" action="/member/login" id="login-form">-->
+<!--						<input type="text" name="loginId" placeholder="Email" id="loginId">-->
+<!--						<input type="password" name="password" placeholder="Password">-->
+<!--						<label for="remember-check">-->
+<!--							<input type="checkbox" id="remember-check">아이디 저장하기-->
+<!--						</label>-->
+<!--						<input id="submitId" type="submit" value="Login">-->
+<!--					</form>-->
+<!--					<ul>-->
+<!--						<li> 이메일 찾기</li>-->
+<!--						<li><span>|</span>비밀번호 찾기</li>-->
 
-					</ul>
-					<div class="api"><img src="/images/api.jpg" alt=""></div>
-				</div>
+<!--					</ul>-->
+<!--					<div class="api"><img src="/images/api.jpg" alt=""></div>-->
+<!--				</div>-->
 
-				<div class="a-bottom">
-					<h1>역대 프로젝트</h1>
 
-			</div>
-		</section>
-	</div>
+<!--		</section>-->
+<!--	</div>-->
 
  <!-- SECTION 0 PRODUCTS SLIDE END-->
 
