--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -71,7 +71,6 @@
 				<h1>역대 프로젝트</h1>
 
 			</div>
-		</div>
 
 		<script>
 			$("#rolling").rolling(1200, 600, {autoscroll: 1, delay: 1500});
@@ -173,7 +172,7 @@
 						</tr>
 						<tr>
 							<td>
-								<label for=name>
+								<label for=nick>
 									<input id="nick" name="nickname" type="text" placeholder="닉네임">
 								</label>
 							</td>
